Funcie van weer toegevoegd, Tempratuur, dorp.

--- a/jsonweer.html
+++ b/jsonweer.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="jsonweer.css">
 </head>
 <body>
-    
+    <div class="cards">
+        <h1 id="name"></h1>
+        <p id="temp"></p>
+        <p id="desc"></p>
+
+        <img src="" id="icon">
+    </div>
     
     <script src="jsonweer.js"></script>
 </body>
